paper/results/run4/httpx-wsgi-L139-none_check_swap/bca_no_scoring/8000/dev_report/test_output.txt
shankrithick/anaconda3/envs/vvenv/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1126, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/_pytest/assertion/rewrite.py", line 185, in exec_module
    exec(co, module.__dict__)
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/respx/__init__.py", line 2, in <module>
    from .handlers import ASGIHandler, WSGIHandler
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/_pytest/assertion/rewrite.py", line 185, in exec_module
    exec(co, module.__dict__)
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/respx/handlers.py", line 3, in <module>
    import httpx
  File "/Users/akshankrithick/projects/httpx/httpx/__init__.py", line 2, in <module>
    from ._api import *
  File "/Users/akshankrithick/projects/httpx/httpx/_api.py", line 6, in <module>
    from ._client import Client
  File "/Users/akshankrithick/projects/httpx/httpx/_client.py", line 943
    request,
IndentationError: unexpected indent